--- a/src/styles/BaeBox.css
+++ b/src/styles/BaeBox.css
@@ -351,6 +351,7 @@ html,body{height: 100%;}
 		float:right;
 		max-width: 50%;
     	box-sizing: border-box;
+    	cursor: pointer;
 	}
 	.baebox > .right .bottom .right a.open-baebox:hover{
 		background: #cdca9d; 
@@ -432,6 +433,7 @@ html,body{height: 100%;}
 
 	}
 	.baebox > .right .bottom .left {
+		min-width: initial;
 		width: 100%;
 		padding: 80px 18px 18px 18px;
 		margin:0;
@@ -570,6 +572,62 @@ html,body{height: 100%;}
 			margin:50% auto 0;
 			transform: translateY(-50%);
 		}
+
+		.baebox-modal .view-baebox-contents .burning-box-NFT{
+			width: 100%;
+			height: 100%;
+		}
+		.baebox-modal .view-baebox-contents .opened-box-NFT{
+			padding: 10px 10px 60px;
+		}
+		.baebox-modal .view-baebox-contents .opened-box-NFT h3{
+			font-size:36px;
+			font-family: 'Articulat CF', sans-serif;
+			font-weight: 300;
+			text-align: left;
+			padding: 10px 10px 10px 60px;
+			position: relative;
+		}
+
+		.baebox-modal .view-baebox-contents .opened-box-NFT h3:before{
+			content: '';
+			background: url(https://dx8cklxaufs1v.cloudfront.net/baecafeweb/image/baebox/cup.png) no-repeat left center;
+			background-size: contain;
+			position: absolute;
+			top: 50%;
+			left: 10px;
+			transform: translateY(-55%);
+			height: 25px;
+			width: 60px;
+		}
+
+
+		.baebox-modal .view-baebox-contents .opened-box-NFT .stake-image-item{
+			width: calc(33.33% - 10px);
+			padding: 5px;
+		}
+		.baebox-modal .view-baebox-contents .opened-bae{
+			position: relative;
+			font-size: 20px;
+			line-height: 50px;
+			text-transform: uppercase;
+			padding: 0 0 0 50px;
+			display: block;
+			text-align: left;
+		}
+		.baebox-modal .view-baebox-contents .opened-bae:before{
+			    content: '';
+			    background: url(https://dx8cklxaufs1v.cloudfront.net/baecafeweb/image/baebox/baecoin.png) no-repeat left center;
+			    background-size: contain;
+			    position: absolute;
+			    left: 10px;
+			    top: 50%;
+			    transform: translateY(-50%);
+			    height: 30px;
+			    width: 30px;
+		}
+
+
 		.baebox-modal .view-baebox-contents a.burn-open-baebox{
 			font-size: 22px;
 		    position: absolute;
@@ -599,6 +657,38 @@ html,body{height: 100%;}
 			height: 24px;
 			width: 24px;
 		}
+
+		a.go-to-opensea {
+		    font-size: 20px;
+		    position: relative;
+		    top:-40px;
+		    transform: translateX(-50%);
+		    text-transform: uppercase;
+		    text-decoration: none;
+		    color: #fff;
+		    background: #3e8af6;
+		    padding: 14px 45px 10px 15px;
+		    border: 1px solid #fff;
+		    font-weight: 700;
+		    cursor: pointer;
+		}
+		a.go-to-opensea:hover{
+		    background: #5c9bf5;
+		}
+		a.go-to-opensea:after{
+			content: '';
+			background: url(https://dx8cklxaufs1v.cloudfront.net/baecafeweb/image/opensea.png) no-repeat center center;
+			background-size: contain;
+			position: absolute;
+			right: 10px;
+			top:50%;
+			transform: translateY(-50%);
+			height: 24px;
+			width: 24px;
+		}
+
+
+
 
 		span.close-baebox-modal{
 			width: 20px;
