--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 ::-webkit-scrollbar {
     width: 18px;
-    background-color: #1d2122;
+    background-color: #bbbbbb;
 }
 ::-webkit-scrollbar-track {
   background-color: transparent;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #3a3a3a;
+  background-color: #818181;
    border-radius: 20px;
    border: 4px solid transparent;
   background-clip: content-box;
@@ -33,7 +33,7 @@ a {
 }
 
 .header {
-  background: #1d2122;
+  background: rgba(176,216,251,255);
   position: fixed;
   width: 87%;
   padding: 20px 3% 20px 10%;
