--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,9 @@ body {
   background-position: bottom;
   background-attachment: fixed;
   /* background-image: url('https://dx8cklxaufs1v.cloudfront.net/baecafeweb/image/BAECAFE-background.jpg'); */
-  background-image: url('./image/BAECAFE-background.jpg');
-  color: #f0f1f3;
-  background-color: rgb(60, 60, 60);
+  background-image: url('./image/bg-karu.jpg');
+  color: #FFFFFF;
+  background-color: rgba(110,181,228,255);
 
 }
 h1, h2, h3, h4{
