Fix some styling

--- a/src/App.css
+++ b/src/App.css
@@ -297,7 +297,7 @@ a.logo{
     right: 0;
     top: 0;
     height: 95px;
-    background-color: #1d2122;
+    background-color: rgba(176,216,251,255);
     z-index: 8;
    }
   
