--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,6 @@ h1, h2, h3, h4{
 
 @media only screen and (max-width: 1500px) {
   body {
-    background-image: url('./image/BAECAFE-mobilebackground.jpg');
+    background-image: url('./image/mobile-karu-bg.jpg');
   }
 }
